--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ chrono = "0.4.31"
 walkdir = "2.4.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.111"
+tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
